@@ -19,7 +19,8 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 /**
- *
+ *Unit tests for NotificationServiceImpl
+ *Uses DTO-based repository approach
  */
 @ExtendWith(MockitoExtension.class)
 class NotificationServiceImplTest {
@@ -37,13 +38,19 @@ class NotificationServiceImplTest {
     @InjectMocks
     private NotificationServiceImpl notificationService;
 
-    //Test for getting valid user notifications
+    public NotificationServiceImplTest() {
+    }
+
+    /**
+     * Test for getting valid user notifications
+     */
+
     @Test
     void testGetUserNotifications() {
 
-        int userId = 1;
+        final int userId = 1;
 
-        NotificationDTO dto = new NotificationDTO(
+        final NotificationDTO dto = new NotificationDTO(
                 "New like on your post",
                 LocalDateTime.now(),
                 "john_doe",
@@ -51,51 +58,60 @@ class NotificationServiceImplTest {
                 new byte[]{1, 2, 3}
         );
 
-        List<NotificationDTO> mockList = Arrays.asList(dto);
+        final List<NotificationDTO> mockList = Arrays.asList(dto);
 
         when(notificationRepository.getUserNotifications(userId))
                 .thenReturn(mockList);
 
-        List<NotificationDTO> result = notificationService.getUserNotifications(userId);
+        final List<NotificationDTO> result = notificationService.getUserNotifications(userId);
 
-        assertNotNull(result);
-        assertEquals(1, result.size());
-        assertEquals("New like on your post", result.get(0).getContent());
+        assertNotNull(result, "Result list should not be null");
+        assertEquals(1, result.size(), "Result list should contain exactly one element");
+        assertEquals("New like on your post",
+                result.getFirst().getContent(),
+                "Notification content should match expected message");
+
 
         verify(notificationRepository, times(1))
                 .getUserNotifications(userId);
     }
 
-    //Test for no notifications found
+    /**
+     *     Test for no notifications found
+     */
     @Test
     void testNoNotificationsFound() {
 
-        int userId = 1;
+        final int userId = 1;
 
         when(notificationRepository.getUserNotifications(userId))
                 .thenReturn(Collections.emptyList());
 
-        NotificationNotFoundException exception = assertThrows(
+        final NotificationNotFoundException exception = assertThrows(
                 NotificationNotFoundException.class,
-                () -> notificationService.getUserNotifications(userId)
+                () -> notificationService.getUserNotifications(userId),
+                "Expected NotificationNotFoundException when user has no notifications"
         );
 
-        assertEquals("No Notifications found for userId: 1", exception.getMessage());
+        assertEquals("No Notifications found for userId: 1", exception.getMessage(),"Exception message should match expected text");
 
         verify(notificationRepository, times(1))
                 .getUserNotifications(userId);
     }
 
-    //Test notifications for Invalid user id
+    /**
+     * Test notifications for Invalid user id
+     */
     @Test
     void testInvalidUserId() {
 
-        InvalidUserIdException exception = assertThrows(
+        final InvalidUserIdException exception = assertThrows(
                 InvalidUserIdException.class,
-                () -> notificationService.getUserNotifications(0)
+                () -> notificationService.getUserNotifications(0),
+                "Expected InvalidUserIdException when userId is less than or equal to 0"
         );
 
-        assertEquals("Invalid userId", exception.getMessage());
+        assertEquals("Invalid userId", exception.getMessage(),"Exception message should match expected text");
 
         verify(notificationRepository, never())
                 .getUserNotifications(anyInt());
